# mlx-8-backprop-week-1-hacknews-vote-predictions

./: .dockerignore  .gitattributes  .gitignore  README.md  analysis.ipynb  pyproject.toml
analysis/: README.md  analyse-data-quality.sql  analysis.ipynb  data-analysis.ipynb  domain_analysis_summary.csv  domain_frequencies.csv  select-items.sql  summary-by-author.sql  summary-by-day-hour.csv  summary-by-day-hour.sql  summary-counts-per-month.csv  summary-counts-per-month.sql  summary-scores-for-single-author.sql  summary-scores.csv  summary-scores.sql  urls.csv
model/: .dockerignore  Dockerfile  README.md  SWEEP_README.md  author_counts.csv  config.py  data_loader.py  domain_counts.csv  evaluate.py  hackernews_model.pth  model.py  optimized_streaming_data_loader.py  predict.py  preprocess.ipynb  requirements.txt  run_on_gpu.sh  streaming_data_loader.py  sweep.py  train.py  train_with_db.py
model/filtered_dataset/: data-00000-of-00002.arrow  (+3 more)
notes/: Monday Discussion.md  Tuesday Presentation - Word2Vec.md
preprocessing/: .env.template  README.md  batch_preprocessor.py  docker-compose.yml  example_usage.py  test_connection.py  test_preprocessor.py  test_progress_table.py
scripts/: README.md  domain_analysis.py  requirements.txt
sql/: summary-by-author.sql  summary-by-day-hour.sql  summary-counts-per-month.csv  summary-dates.sql  summary-scores-by-bond.csv  summary-scores-for-Tomte.csv  summary-scores-for-rbanffy.csv  summary-scores.csv  summary-scores.sql  valid-sample-data.sql
text-embeddings/: README.md  david-word2vec.ipynb  vocab.csv  word_embeddings.py
(+1 files in other folders)
